[project]
name = "asuka"
version = "0.1.0"
description = "asuka"
readme = "README.md"
requires-python = ">=3.9, <4.0"

[tool.nonebot]
adapters = [
    { name = "OneBot V11", module_name = "nonebot.adapters.onebot.v11" }
]
plugins = ["nonebot_plugin_heweather"]
plugin_dirs = ["asuka/plugs"]
builtin_plugins = ["echo"]
